<resources>
    <string name="app_name">Weather Sample</string>
    <string name="search_city_hint">City</string>
    <string name="city_result_label">City:</string>
    <string name="country_result_label">Country:</string>
    <string name="coordinates_result_label">Coordinates:</string>
    <string name="coordinates_lat_lon">Lat: %1$.2f, Lon: %2$.2f</string>
    <string name="city_error_loading">Could not load cities</string>
    <string name="weather_error_loading">Could not load weather</string>
    <string name="weather">Weather</string>
    <string name="weather_city_label">City</string>
    <string name="weather_city_name">%1$s, %2$s</string>
    <string name="today_weather_button_label">Today</string>
    <string name="forecast_weather_button_label">Forecast</string>
    <string name="min_temperature_label">Min:</string>
    <string name="max_temperature_label">Max:</string>
    <string name="feels_like_label">Feels:</string>
    <string name="content_description_weather_icon">Weather icon</string>
    <string name="wind_speed_label">Wind:</string>
    <string name="humidity_label">Humidity:</string>
    <string name="pressure_label">Pressure:</string>
    <string name="visibility_label">Visibility:</string>
    <string name="formatted_temperature">%1$.1f°C</string>
    <string name="formatted_wind">%1$.2f kph</string>
    <string name="formatted_humidity">%1$d %%</string>
    <string name="formatted_pressure">%1$d mb</string>
    <string name="formatted_visibility">%1$d m</string>
    <string name="retry">Retry</string>
    <string name="failed_to_load_weather_data">Failed to load weather data</string>
    <string name="sunrise_label">Sunrise:</string>
    <string name="sunset_label">Sunset:</string>
    <string name="content_description_forecast_icon">Forecast icon</string>
    <string name="today">Today</string>
    <string name="tomorrow">Tomorrow</string>
    <string name="forecast_card_header">%1$s - %2$s</string>
    <string name="failed_to_load_forecast">Failed to load forecast</string>
    <string name="no_results_found_label">No results found</string>
    <string name="weather_label">Weather</string>
    <string name="refresh">Refresh</string>
</resources>
