<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:bind="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="state"
            type="com.francescsoftware.weathersample.presentation.feature.weather.tabs.today.TodayWeatherCardState" />
    </data>

    <merge
        tools:layout_height="wrap_content"
        tools:layout_width="320dp"
        tools:parentTag="com.google.android.material.card.MaterialCardView">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/weather_card_root"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guide_half"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent=".5" />

            <TextView
                android:id="@+id/temperature"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@{state.temperature}"
                android:textAppearance="?textAppearanceHeadline4"
                android:textColor="?android:textColorPrimary"
                app:layout_constraintBottom_toTopOf="@+id/description"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/icon"
                tools:text="21°C" />

            <TextView
                android:id="@+id/description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@{state.description}"
                android:textAppearance="?textAppearanceCaption"
                android:textColor="?android:textColorPrimary"
                app:layout_constraintBottom_toBottomOf="@+id/icon"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/icon"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/temperature"
                tools:text="Few Clouds" />

            <ImageView
                android:id="@+id/icon"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/today_card_icon_height"
                android:adjustViewBounds="true"
                android:contentDescription="@string/content_description_weather_icon"
                app:layout_constraintEnd_toStartOf="@+id/temperature"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                bind:imageDrawableId="@{state.iconId}"
                tools:srcCompat="@tools:sample/avatars" />

            <TextView
                android:id="@+id/min_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_double"
                android:text="@string/min_temperature_label"
                android:textAppearance="?textAppearanceOverline"
                android:textColor="?android:textColorSecondary"
                app:layout_constraintBottom_toTopOf="@+id/max_label"
                app:layout_constraintStart_toEndOf="@+id/temperature"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/max_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/max_temperature_label"
                android:textAppearance="?textAppearanceOverline"
                android:textColor="?android:textColorSecondary"
                app:layout_constraintBottom_toTopOf="@+id/feels_like_label"
                app:layout_constraintStart_toStartOf="@+id/min_label"
                app:layout_constraintTop_toBottomOf="@+id/min_label" />

            <TextView
                android:id="@+id/feels_like_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/feels_like_label"
                android:textAppearance="?textAppearanceOverline"
                android:textColor="?android:textColorSecondary"
                app:layout_constraintBottom_toBottomOf="@+id/icon"
                app:layout_constraintStart_toStartOf="@+id/min_label"
                app:layout_constraintTop_toBottomOf="@+id/max_label" />

            <androidx.constraintlayout.widget.Barrier
                android:id="@+id/temp_labels_barrier"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:barrierDirection="end"
                app:constraint_referenced_ids="min_label, max_label, feels_like_label" />

            <TextView
                android:id="@+id/min_temperature"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_half"
                android:text="@{state.minTemperature}"
                android:textAllCaps="false"
                android:textAppearance="?textAppearanceCaption"
                android:textColor="?android:textColorPrimary"
                app:layout_constraintBaseline_toBaselineOf="@+id/min_label"
                app:layout_constraintStart_toEndOf="@+id/temp_labels_barrier"
                tools:text="8°C" />

            <TextView
                android:id="@+id/max_temperature"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_single"
                android:text="@{state.maxTemperature}"
                android:textAppearance="?textAppearanceCaption"
                android:textColor="?android:textColorPrimary"
                app:layout_constraintBaseline_toBaselineOf="@+id/max_label"
                app:layout_constraintStart_toEndOf="@+id/temp_labels_barrier"
                tools:text="24°C" />

            <TextView
                android:id="@+id/feels_like_temperature"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_single"
                android:text="@{state.feelsLikeTemperature}"
                android:textAppearance="?textAppearanceCaption"
                android:textColor="?android:textColorPrimary"
                app:layout_constraintBaseline_toBaselineOf="@+id/feels_like_label"
                app:layout_constraintStart_toEndOf="@+id/temp_labels_barrier"
                tools:text="22°C" />

            <TextView
                android:id="@+id/wind_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_double"
                android:layout_marginTop="@dimen/margin_double"
                android:text="@string/wind_speed_label"
                android:textAppearance="?textAppearanceOverline"
                android:textColor="?android:textColorSecondary"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/icon" />

            <TextView
                android:id="@+id/humidity_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_single"
                android:text="@string/humidity_label"
                android:textAppearance="?textAppearanceOverline"
                android:textColor="?android:textColorSecondary"
                app:layout_constraintStart_toStartOf="@+id/wind_label"
                app:layout_constraintTop_toBottomOf="@+id/wind_label" />

            <androidx.constraintlayout.widget.Barrier
                android:id="@+id/left_column_barrier"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:barrierDirection="end"
                app:constraint_referenced_ids="wind_label, humidity_label" />

            <TextView
                android:id="@+id/wind_speed"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_single"
                android:text="@{state.windSpeed}"
                android:textAppearance="?textAppearanceCaption"
                android:textColor="?android:textColorPrimary"
                app:layout_constraintBaseline_toBaselineOf="@+id/wind_label"
                app:layout_constraintStart_toEndOf="@+id/left_column_barrier"
                tools:text="12kph" />

            <TextView
                android:id="@+id/humidity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_single"
                android:text="@{state.humidity}"
                android:textAppearance="?textAppearanceCaption"
                android:textColor="?android:textColorPrimary"
                app:layout_constraintBaseline_toBaselineOf="@+id/humidity_label"
                app:layout_constraintStart_toEndOf="@+id/left_column_barrier"
                tools:text="53%" />

            <TextView
                android:id="@+id/pressure_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_double"
                android:text="@string/pressure_label"
                android:textAppearance="?textAppearanceOverline"
                android:textColor="?android:textColorSecondary"
                app:layout_constraintStart_toEndOf="@+id/guide_half"
                app:layout_constraintTop_toBottomOf="@+id/icon" />

            <TextView
                android:id="@+id/visibility_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_single"
                android:text="@string/visibility_label"
                android:textAppearance="?textAppearanceOverline"
                android:textColor="?android:textColorSecondary"
                app:layout_constraintStart_toStartOf="@+id/pressure_label"
                app:layout_constraintTop_toBottomOf="@+id/pressure_label" />

            <androidx.constraintlayout.widget.Barrier
                android:id="@+id/right_column_barrier"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:barrierDirection="end"
                app:constraint_referenced_ids="pressure_label, visibility_label" />

            <TextView
                android:id="@+id/pressure"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_single"
                android:text="@{state.pressure}"
                android:textAppearance="?textAppearanceCaption"
                android:textColor="?android:textColorPrimary"
                app:layout_constraintBaseline_toBaselineOf="@+id/pressure_label"
                app:layout_constraintStart_toEndOf="@+id/right_column_barrier"
                tools:text="1024mb" />

            <TextView
                android:id="@+id/visibility"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_single"
                android:text="@{state.visibility}"
                android:textAppearance="?textAppearanceCaption"
                android:textColor="?android:textColorPrimary"
                app:layout_constraintBaseline_toBaselineOf="@+id/visibility_label"
                app:layout_constraintStart_toEndOf="@+id/right_column_barrier"
                tools:text="10000m" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </merge>
</layout>
