<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="model"
            type="com.francescsoftware.weathersample.presentation.feature.search.CityResultModel" />
    </data>

    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:focusable="true"
        android:foreground="?selectableItemBackgroundBorderless"
        android:onClick="@{() -> model.onClick()}">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="@dimen/margin_double">

            <TextView
                android:id="@+id/city_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/city_result_label"
                android:textAppearance="?textAppearanceBody2"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/country_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_single"
                android:text="@string/country_result_label"
                android:textAppearance="?textAppearanceBody2"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/city_label" />

            <TextView
                android:id="@+id/coordinates_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_single"
                android:text="@string/coordinates_result_label"
                android:textAppearance="?textAppearanceBody2"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/country_label" />

            <androidx.constraintlayout.widget.Barrier
                android:id="@+id/label_barrier"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:barrierDirection="end"
                app:constraint_referenced_ids="city_label, country_label, coordinates_label" />

            <TextView
                android:id="@+id/city"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_single"
                android:ellipsize="end"
                android:lines="1"
                android:text="@{model.name}"
                android:textAppearance="?textAppearanceBody1"
                app:layout_constraintBaseline_toBaselineOf="@+id/city_label"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/label_barrier"
                tools:text="Vancouver" />

            <TextView
                android:id="@+id/country"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_single"
                android:ellipsize="end"
                android:lines="1"
                android:text="@{model.country}"
                android:textAppearance="?textAppearanceBody1"
                app:layout_constraintBaseline_toBaselineOf="@+id/country_label"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/label_barrier"
                tools:text="Canada" />

            <TextView
                android:id="@+id/coordinates"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_single"
                android:ellipsize="end"
                android:lines="1"
                android:text="@{model.coordinates}"
                android:textAppearance="?textAppearanceBody1"
                app:layout_constraintBaseline_toBaselineOf="@+id/coordinates_label"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/label_barrier"
                tools:text="Lat: 49.26, Lon:: -123.11" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </com.google.android.material.card.MaterialCardView>
</layout>
